# fragrance.supermanzer.io

./: .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/config/: __init__.py  celery.py  settings.py  urls.py
backend/fragrance/: admin.py  apps.py  llm.py  models.py  search.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
backend/fragrance/management/commands/: import_fragrance_collection.py  seed_recommendation_history.py
backend/fragrance/migrations/: 0001_initial.py  0002_fragrance_updated_at_recommendationrun_intro.py  0002_recommendationrun_email_status.py
backend/fragrance/templates/fragrance/: password_reset_email.txt  recommendation_email.html
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
frontend/app/components/: AppAlert.vue
frontend/app/composables/: useApi.ts  useExport.ts  useFragrance.ts  useImport.ts  useProfile.ts  useRuns.ts  useSettings.ts
frontend/app/layouts/: auth.vue  default.vue
frontend/app/middleware/: auth.global.ts
frontend/app/pages/: profile.vue  settings.vue
frontend/app/pages/auth/: forgot-password.vue  login.vue  register.vue  reset-password.vue
frontend/app/pages/fragrance/: index.vue
frontend/app/pages/runs/: index.vue
nginx/: nginx.conf  nginx.dev.conf
searxng/: limiter.toml
