[project]
name = "fragrance-backend"
version = "0.1.0"
description = "Data models, AI interactions, and business logic of the franrance recommender web application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.102.0",
    "celery[redis]>=5.6.3",
    "django>=6.0.5",
    "django-celery-beat>=2.9.0",
    "django-cors-headers>=4.9.0",
    "django-encrypted-model-fields>=0.6.5",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "redis>=6.4.0",
    "requests>=2.34.2",
]
